# minigrep-rust-tutorial

./: Cargo.toml  README.md  sample.txt
src/: lib.rs  main.rs  search.rs
