[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Tribaldos (@tribal2)"]
description = "Just a 'Grep' clone created to learn Rust"
repository = "https://github.com/tribal2/minigrep-rust-tutorial"

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
serde_json = "1.0.87"
